Rename directory name again to make it works better as a girder plugin; Rename client side project to danesfield-client;

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-    <title>core3dapp</title>
+    <title>Danesfield</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but core3dapp doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Danesfield doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
